fix nav width on mobile

--- a/app/sass/_navbar.sass
+++ b/app/sass/_navbar.sass
@@ -25,6 +25,8 @@
         line-height: inherit
         text-transform: uppercase
         text-decoration: none
+        +screen(mobile)
+          padding: 0 15px
         &:hover
           color: $gold
   &.fixed
